# rs-verticalslice-template

./: Cargo.toml  README.md
src/: main.rs
src/domain/entities/: user.rs
src/features/: users.rs
src/features/user/: add_user.rs  get_user.rs
src/features/users/: add_user.rs  get_user.rs
